about.css
h1 {
  color: var(--color-light);
  font-size: 3.5rem;
  padding: 0 2rem;
  white-space: nowrap;
}

h2, h3 {
  padding: 0.5em 0;
}

h2 {
  font-size: 3rem;
  line-height: 1;
}

section {
  max-width: 100%;
  padding: 0 2rem;
  width: 600px;
}

.content {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  min-height: 100vh;
  padding-bottom: 4rem;
  width: 100vw;
}

